# cocktail-research

./: .gitignore  README.md  REFACTOR_SUMMARY.md  TODO.md  examine_parquet.py  kurts-notes.md  rationalization_progress.json  test_ingredient_parsing.py
cocktail-utils/: README.md  USAGE.md  pyproject.toml
cocktail-utils/src/cocktail_utils/: __init__.py
cocktail-utils/src/cocktail_utils/database/: __init__.py  schema.py  units.py  utils.py
cocktail-utils/src/cocktail_utils/ingredients/: __init__.py  models.py  normalization.py  number_utils.py  parsing.py  rationalization.py  rationalization_utils.py
cocktail-utils/src/cocktail_utils/ingredients/data/: brand_dictionary.json  ingredient_taxonomy.json  punch_files_to_skip.txt
cocktail-utils/src/cocktail_utils/recipes/: __init__.py  parsing.py  sources.py
cocktail-utils/src/cocktail_utils/scraping/: __init__.py  polite.py  retry.py
cocktail-utils/tests/: test_ingredient_parsing.py  test_normalization.py  test_rationalization.py
ingredient_rationalizer/: ingredient_mappings.json  ingredient_rationalizer.py
input_data/: batch.json  new-ingredients-for-upload.json  rationalized-recipes-punch.json  rationalized-recipes.json  validated-recipes.json
notebooks/: clean-ingredients.ipynb  explore-recipes.ipynb  metapath2vec_embeddings.ipynb  node2vec.ipynb  utils.py
old-scripts/: rationalize_ingredients.py
recipe_ingest/: batch_rationalize_recipes.py  migrate_validation_log.py  rationalization_progress.json
recipe_validator/: recipe_validator.py
scripts/: README.md  create_ingredients_table.py  create_rationalized_matrix.py  create_recipe_matrix.py  (+13 more)
(+24 files in other folders)
