[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocktail-utils"
version = "0.1.0"
description = "Utilities for cocktail recipe processing and analysis"
readme = "README.md"
authors = [
    {name = "Kurt Thorn", email = "kurt.thorn@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "ruff>=0.5.5",
    "pytest-mock>=3.0.0",
]
llm = [
    "boto3>=1.28.0",
]

[project.urls]
"Homepage" = "https://github.com/kurtthorn/cocktail-utils"
"Bug Reports" = "https://github.com/kurtthorn/cocktail-utils/issues"
"Source" = "https://github.com/kurtthorn/cocktail-utils"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true